登录页面更新

--- a/src-mobile/css/amaze/app.css
+++ b/src-mobile/css/amaze/app.css
@@ -8,7 +8,7 @@
 html {
     font-size: 10px;
     height: auto !important;
-    /*overflow: scroll !important;*/
+    overflow: scroll !important;
 }
 
 ul {
