--- a/src-mobile/css/overflow.css
+++ b/src-mobile/css/overflow.css
@@ -25,8 +25,12 @@ body {
     font-family: "Segoe UI", "Lucida Grande", Helvetica, Arial, "Microsoft YaHei",
     FreeSans, Arimo, "Droid Sans", "wenquanyi micro hei", "Hiragino Sans GB",
     "Hiragino Sans GB W3", Arial, sans-serif;
-    background-color: #EEA91F;
+    /*background-color: #fc8f56;*/
     color: #FDFDFD;
+}
+.totop {
+    background-image:-webkit-linear-gradient(to bottom, #FC8F56, #EEA91F);
+    background-image:linear-gradient(to bottom,#FC8F56,#EEA91F);
 }
 
 .am-u-sm-2 img {
@@ -36,9 +40,6 @@ body {
 .am-margin-top{
     margin-top: 30%;
 }
-/*.am-u-sm-4{*/
-    /*height: 100%;*/
-/*}*/
 
 .am-u-sm-3 img {
     width: 80%;
@@ -66,4 +67,10 @@ body {
 .bgp img{
     width: 25px;
     height: 25px;
+}
+.match-parent{
+     width: 100%;
+ }
+.nopadding{
+    padding: 0 !important;
 }
