短信申请记录

--- a/src-mobile/css/overflow.css
+++ b/src-mobile/css/overflow.css
@@ -27,15 +27,20 @@ body {
     "Hiragino Sans GB W3", Arial, sans-serif;
     /*background-color: #fc8f56;*/
     color: #FDFDFD;
+    user-select: none;
 }
 .totop {
-    background-image:-webkit-linear-gradient(to bottom, #FC8F56, #EEA91F);
+    /*background-image:-webkit-linear-gradient(to bottom, #FC8F56, #EEA91F);*/
     background-image:linear-gradient(to bottom,#FC8F56,#EEA91F);
 }
 
 .am-u-sm-2 img {
     width: 30px;
     height: 30px;
+}
+.am-u-sm-4 img{
+    width: 100px;
+    height: 100px;
 }
 .am-margin-top{
     margin-top: 10%;
@@ -80,3 +85,6 @@ body {
 i{
     color: #C8C8C8;
 }
+/*.bgcolor{*/
+  /*background-color: #d85e0b ;*/
+/*}*/
